Test fix blurr

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -3918,6 +3918,7 @@ h3 {
     padding: 15px;
     border-radius: 8px;
     border: 2px solid var(--orange-principale);
+    z-index: 1001;
 }
 
 .consulter-offre-back .confirmation-popup p {
